name:                JStlc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/JStlc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2 && < 1.3
                     , megaparsec >= 6.4 && < 6.5
                     , containers >= 0.5 && < 0.6
  exposed-modules:     Language.JStlc.Types
                     , Language.JStlc.Syntax
                     , Language.JStlc.Eval
                     , Language.JStlc.JS
                     , Language.JStlc.Compile
                     , Language.JStlc.Parse
                     , Language.JStlc.Unchecked
                     , Language.JStlc.Check
                     , Data.Nat
  ghc-options:         -Wall -fno-warn-unused-do-bind -O2

executable JStlc
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2 && < 1.3
                     , JStlc
  ghc-options:         -Wall -fno-warn-unused-do-bind -O2
