name:                JStlc
version:             0.1.0.0
synopsis: (Extended) Simply-Typed Lambda Calculus REPL and Javascript Compiler
description:
  JStlc is a proof-of-concept interpreter and compiler which implements a
  simply-typed lambda calculus, augmented with recursive bindings (via implicit
  or explicit fixed-point combinator), "polymorphic" option and list types
  as well as integer, boolean, and string types with basic operations.
  
  The JStlc REPL parses, typechecks, and evaluates terms and statements in an
  interactive way; it can also be used to compile the current global definitions
  to a Javascript file.
  
  When run as a compiler, JStlc will translate input JStlc files to output
  Javascript files on a one-to-one basis.

homepage:            https://github.com/githubuser/JStlc#readme
license:             BSD3
license-file:        LICENSE
author:              Derrick W. Turk
maintainer:          dwt@terminusdatascience.com
copyright:           2018 Derrick W. Turk
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2 && < 1.3
                     , megaparsec >= 6.4 && < 6.5
                     , containers >= 0.5 && < 0.6
                     , mtl >= 2.2 && < 2.3
  exposed-modules:     Language.JStlc.Types
                     , Language.JStlc.Syntax
                     , Language.JStlc.Eval
                     , Language.JStlc.JS
                     , Language.JStlc.Compile
                     , Language.JStlc.Parse
                     , Language.JStlc.Unchecked
                     , Language.JStlc.Check
                     , Language.JStlc.Repl
                     , Language.JStlc.Pretty.Class
                     , Data.Nat
                     , Data.Vect
  ghc-options:         -Wall -fno-warn-unused-do-bind -O2

executable JStlc
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5.0
                     , filepath >= 1.4 && < 1.5
                     , text >= 1.2 && < 1.3
                     , JStlc
  ghc-options:         -Wall -fno-warn-unused-do-bind -O2
